src/pages/components/RichTextEditor.css
.editor-container {
  border: 1px solid #ced4da;
  border-radius: 6px;
}

.editable-area {
  min-height: 350px; /* Tăng chiều cao một chút */
  padding: 10px 15px;
  outline: none;
  line-height: 1.6;
}

/* Style cho các list item */
.editable-area ul, .editable-area ol {
  padding-left: 20px;
}


/* --- UPDATED: Sửa lỗi tràn layout --- */
.toolbar {
  display: flex;
  flex-wrap: wrap; /* Cho phép các nút tự động xuống dòng khi không đủ không gian */
  gap: 5px;      /* Thêm khoảng cách nhỏ giữa các nút */
  background: #fff;
  padding: 10px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom: 1px solid #ddd;
}

.toolbar button {
  border: 0;
  display: flex;
  background: none;
  border-radius: 6px;
  padding: 8px;
  cursor: pointer;
  vertical-align: middle;
}

.toolbar button.toolbar-item {
  background-color: #f0f2f5;
}

.toolbar button:disabled {
  cursor: not-allowed;
}

.toolbar button:hover:not([disabled]) {
  background-color: #eee;
}

.toolbar button.active {
  background-color: #e0e0e0;
}

.toolbar .divider {
  width: 1px;
  background-color: #eee;
  margin: 0 4px;
}

.toolbar i {
  font-size: 16px;
  width: 16px;
  height: 16px;
  display: block;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

/* Các icon cụ thể cho từng nút */
.toolbar i.format.bold { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/bold.png'); }
.toolbar i.format.italic { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/italic.png'); }
.toolbar i.format.underline { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/underline.png'); }
.toolbar i.format.strikethrough { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/strikethrough.png'); }
.toolbar i.format.code { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/code.png'); }
.toolbar i.format.bullet-list { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/bulleted-list.png'); }
.toolbar i.format.numbered-list { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/numbered-list.png'); }
.toolbar i.format.quote { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/quote-left.png'); }
.toolbar i.format.code-block { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/code-file.png'); }
.toolbar i.format.undo { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/undo.png'); }
.toolbar i.format.redo { background-image: url('https://img.icons8.com/ios-glyphs/30/000000/redo.png'); }

